--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,10 +10,8 @@ name: Upload Python Package
 
 on:
   release:
-    types: [published]
-
-permissions:
-  contents: read
+    types: [created]
+  workflow_dispatch: {}
 
 jobs:
   deploy:
