--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,6 +18,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    environment:
+      name: pypi
+      url: https://pypi.org/p/stockoption
+
+    permissions:
+      id-token: write
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
