--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,13 +33,14 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
+        pip install -U twine build packaging
         python -m pip install --upgrade pip
         pip install build
     - name: Build package
       run: python -m build
     - name: Publish package
       run: |
-        python3 -m twine upload dist/*
+        twine upload dist/*
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
