--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,10 +8,7 @@
 
 name: Upload Python Package
 
-on:
-  release:
-    types: [created]
-  workflow_dispatch: {}
+on: push
 
 jobs:
   deploy:
@@ -38,16 +35,8 @@ jobs:
         pip install build
     - name: Build package
       run: python -m build
-    - name: Publish package
-      run: |
-        twine upload dist/*
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-
-
-    
-    #  uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-    #  with:
-     #   user: __token__
-      #  password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Publish package   
+      uses: pypa/gh-action-pypi-publish@release/v1
+      #with:
+        #user: __token__
+        #password: ${{ secrets.PYPI_API_TOKEN }}
