--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -88,5 +88,5 @@ jobs:
       # `dist/` contains the built packages, and the
       # sigstore-produced signatures and certificates.
       run: >-
-        gh release create 'main' [dist/**]
+        gh release create '${{ github.ref_name }}' dist/** --repo '${{ github.repository }}'
         gh release upload '${{ github.ref_name }}' dist/** --repo '${{ github.repository }}'
