--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -87,6 +87,6 @@ jobs:
       # Upload to GitHub Release using the `gh` CLI.
       # `dist/` contains the built packages, and the
       # sigstore-produced signatures and certificates.
-      run: >-
+      run: 
         gh release create '${{ github.ref_name }}' dist/** --repo '${{ github.repository }}'
         gh release upload '${{ github.ref_name }}' dist/** --repo '${{ github.repository }}'
